Fix whitespace fake-padding issue

--- a/client/src/app/about-section/about-section.component.scss
+++ b/client/src/app/about-section/about-section.component.scss
@@ -25,6 +25,8 @@
         }
 
         .icons {
+            font-size: 0;
+
             img {
                 width: 42px;
                 margin-right: 16px;
